--- a/lkrimportsexports/src/Qualityinspection.css
+++ b/lkrimportsexports/src/Qualityinspection.css
@@ -115,6 +115,7 @@
       font-size: 32px;
       text-align: center;
       padding: 20px;
+      padding-top: 300px;
     }
   
     .service-of-product-heading,
