--- a/lkrimportsexports/src/Airservicespage8.css
+++ b/lkrimportsexports/src/Airservicespage8.css
@@ -62,6 +62,7 @@
     .mixed-air-services-text {
         font-size: 48px;
         padding-left: 100px;
+        padding-top: 300px;
     }
     .air-services-heading {
         font-size: 26px;
@@ -79,6 +80,7 @@
         font-size: 42px;
         padding-left: 50px;
         text-align: center;
+        padding-top: 300px;
     }
     .air-services-heading {
         font-size: 24px;
@@ -97,6 +99,7 @@
         font-size: 36px;
         padding-left: 20px;
         text-align: center;
+        padding-top: 300px;
     }
     .air-services-heading {
         font-size: 22px;
@@ -114,6 +117,7 @@
     .mixed-air-services-text {
         font-size: 30px;
         padding: 0 10px;
+        padding-top: 300px;
     }
     .air-services-heading {
         font-size: 20px;
