--- a/lkrimportsexports/src/Confirmingsample.css
+++ b/lkrimportsexports/src/Confirmingsample.css
@@ -204,10 +204,11 @@
 @media (max-width: 992px) {
     .confirming-sample-item {
         font-size: 48px;
+        padding-top: 70px;
     }
     .confirming-sample-text {
         font-size: 20px;
-        padding-right: 100px;
+        padding-right: 0px;
     }
     .six-type-productsample {
         font-size: 28px;
