--- a/lkrimportsexports/src/Gettingstartedpage1.css
+++ b/lkrimportsexports/src/Gettingstartedpage1.css
@@ -7,7 +7,7 @@
     background-color: #B3C4E4;
     background-size: cover;
     width: 100vw; 
-    margin-left: calc(-50vw + 50%); /* Center the content */
+    margin-left: calc(-50vw + 50%);
     border-radius: 5px;
 }
 .step-custom {
@@ -36,7 +36,7 @@
     background-color: #F0F3FA;
     background-size: cover;
     width: 100vw; 
-    margin-left: calc(-50vw + 50%); /* Center the content */
+    margin-left: calc(-50vw + 50%); 
     border-radius: 5px;
 }
 .gs-que1 {
@@ -114,121 +114,97 @@
 
 
 
-@media (max-width: 1200px) {
-    .Heading {
-        font-size: 28px;
-    }
-    .step-custom, .gs-faq-que {
-        font-size: 28px;
-    }
-    .gs-que, .gs-text, .gs-points, .gs-faq-ans {
-        font-size: 22px;
-        padding-left: 120px;
-        padding-right: 40px;
-    }
-    .gs-faq-heading {
-        padding-left: 300px;
-        font-size: 30px;
-    }
-}
-
-@media (max-width: 992px) {
-    .Heading {
-        font-size: 26px;
-    }
-    .step-custom, .gs-faq-que {
-        font-size: 26px;
-        padding-left: 50px;
-    }
-    .gs-que, .gs-text, .gs-points, .gs-faq-ans {
-        font-size: 20px;
-        padding-left: 80px;
-        padding-right: 30px;
-    }
-    .gs-faq-heading {
-        padding-left: 200px;
-        font-size: 28px;
-    }
+/* Mobile devices (up to 576px) */
+@media (max-width: 576px) {
+    .Heading,
+    .step-custom,
+    .gs-que,
+    .gs-faq-heading,
     .gs-faq-que {
-        font-size: 26px;
-    }
-    .gs-faq-ans {
-        font-size: 22px;
-    }
-}
-
-@media (max-width: 768px) {
-    .Heading {
-        font-size: 24px;
-    }
-    .step-custom, .gs-faq-que {
-        font-size: 24px;
-        padding-left: 30px;
-    }
-    .gs-que, .gs-text, .gs-points {
-        font-size: 18px;
-        padding-left: 50px;
+        font-size: 20px;
+        padding-left: 20px;
         padding-right: 20px;
     }
+
+    .gs-text,
+    .gs-points,
+    .gsp-text,
+    .gs-faq-ans {
+        font-size: 16px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .custom-card-one,
+    .custom-card-two,
+    .custom-card-three,
+    .custom-card-four,
+    .custom-card-five,
+    .custom-card-six,
+    .custom-part2 {
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .gs-faq-heading {
+        padding-left: 20px;
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+}
+
+/* Tablets (576px to 768px) */
+@media (min-width: 577px) and (max-width: 768px) {
+    .step-custom,
+    .gs-que,
+    .gs-faq-heading {
+        font-size: 24px;
+        padding-left: 40px;
+    }
+
+    .gs-text,
+    .gs-points {
+        font-size: 18px;
+        padding-left: 40px;
+        padding-right: 30px;
+    }
+
+    .custom-part2 {
+        padding-left: 40px;
+        padding-right: 30px;
+    }
+
     .gs-faq-heading {
         padding-left: 100px;
-        font-size: 26px;
-        text-align: center;
-    }
-    .gs-faq-que {
-        font-size: 22px;
-    }
-    .gs-faq-ans {
-        font-size: 20px;
     }
 }
 
-@media (max-width: 576px) {
-    .Heading {
-        font-size: 20px;
-    }
-    .step-custom, .gs-faq-que {
-        font-size: 20px;
-        padding-left: 20px;
-    }
-    .gs-que, .gs-text, .gs-points {
-        font-size: 16px;
-        padding-left: 20px;
-        padding-right: 10px;
-    }
+/* Laptops and desktops (768px and above) */
+@media (min-width: 769px) and (max-width: 1200px) {
     .gs-faq-heading {
-        padding-left: 0;
-        font-size: 24px;
-        text-align: center;
+        padding-left: 200px;
     }
-    .gs-faq-que {
-        font-size: 18px;
-    }
-    .gs-faq-ans {
-        font-size: 16px;
+
+    .gs-que,
+    .gs-text,
+    .gs-points {
+        padding-left: 100px;
     }
 }
-
-@media (max-width: 400px) {
-    .Heading {
-        font-size: 18px;
+@media (max-width: 1190px){
+    .gs-que1 {
+        padding-left: 100px;
     }
-    .step-custom, .gs-faq-que {
-        font-size: 18px;
-        padding-left: 10px;
+}
+@media (max-width: 768px){
+    .gs-que1 {
+        padding-left: 40px;
     }
-    .gs-que, .gs-text, .gs-points {
-        font-size: 14px;
-        padding-left: 10px;
-        padding-right: 5px;
-    }
-    .gs-faq-heading {
-        font-size: 20px;
-    }
-    .gs-faq-que {
-        font-size: 16px;
-    }
-    .gs-faq-ans {
-        font-size: 14px;
+}
+@media (max-width: 576px){
+    .gs-que1 {
+        padding-left: 20px;
     }
 }
