--- a/lkrimportsexports/src/Howimportsworkpage4.css
+++ b/lkrimportsexports/src/Howimportsworkpage4.css
@@ -63,6 +63,7 @@
     .how-imports-work-text {
         font-size: 48px;
         padding-right: 40px;
+        padding-top: 300px;
     }
     .how-import-heading,
     .how-import-head {
@@ -85,6 +86,7 @@
         min-height: auto;
         padding: 40px 20px;
         text-align: center;
+        padding-top: 300px;
     }
     .how-imports-work-text {
         font-size: 36px;
@@ -112,6 +114,7 @@
 @media (max-width: 480px) {
     .how-imports-work-text {
         font-size: 28px;
+        padding-top: 200px;
     }
     .how-import-heading,
     .how-import-head {
