--- a/lkrimportsexports/src/Importexportspage2.css
+++ b/lkrimportsexports/src/Importexportspage2.css
@@ -74,6 +74,7 @@
     .import-text {
         font-size: 48px;
         padding-right: 50px;
+        padding-top: 300px;
     }
     .import-heading, .export-head {
         font-size: 26px;
@@ -91,6 +92,7 @@
         font-size: 42px;
         padding-right: 30px;
         line-height: 1.3;
+        padding-top: 300px;
     }
     .import-heading, .export-head {
         font-size: 24px;
@@ -110,6 +112,7 @@
         font-size: 36px;
         padding-right: 10px;
         text-align: center;
+        padding-top: 300px;
     }
     .import-heading, .export-head {
         font-size: 22px;
@@ -130,6 +133,7 @@
         font-size: 30px;
         padding: 0 5px;
         text-align: center;
+        padding-top: 300px;
     }
     .import-heading, .export-head {
         font-size: 20px;
