--- a/lkrimportsexports/src/Mixedcontainerservicespage7.css
+++ b/lkrimportsexports/src/Mixedcontainerservicespage7.css
@@ -73,6 +73,7 @@
     .mixed-conatiner-services-text {
         font-size: 48px;
         padding-left: 100px;
+        padding-top: 300px;
     }
     .container-services-heading, .benefits-head {
         font-size: 26px;
@@ -90,6 +91,7 @@
         font-size: 42px;
         padding-left: 50px;
         text-align: center;
+        padding-top: 300px;
     }
     .container-services-heading, .benefits-head {
         font-size: 24px;
@@ -108,6 +110,7 @@
         font-size: 36px;
         padding-left: 20px;
         text-align: center;
+        padding-top: 300px;
     }
     .container-services-heading, .benefits-head {
         font-size: 22px;
@@ -125,6 +128,7 @@
     .mixed-conatiner-services-text {
         font-size: 30px;
         padding: 0 10px;
+        padding-top: 300px;
     }
     .container-services-heading, .benefits-head {
         font-size: 20px;
