--- a/lkrimportsexports/src/Shippingcustoms.css
+++ b/lkrimportsexports/src/Shippingcustoms.css
@@ -73,6 +73,7 @@
 @media (max-width: 992px) {
     .shipping-customs-item {
         font-size: 36px;
+        padding-top: 300px;
     }
     .shipping-customs-text {
         font-size: 18px;
@@ -98,6 +99,7 @@
 @media (max-width: 768px) {
     .shipping-customs-item {
         font-size: 28px;
+        padding-top: 250px;
     }
     .shipping-customs-text {
         font-size: 16px;
@@ -123,6 +125,7 @@
 @media (max-width: 576px) {
     .shipping-customs-item {
         font-size: 24px;
+        padding-top: 250px;
     }
     .shipping-customs-text {
         font-size: 14px;
