--- a/lkrimportsexports/src/Whatdoesitcostpage3.css
+++ b/lkrimportsexports/src/Whatdoesitcostpage3.css
@@ -405,6 +405,7 @@
     .what-does-it-cost-text {
         font-size: 48px;
         padding-left: 100px;
+        padding-top: 350px;
     }
     .what-does-heading, .images-heading {
         font-size: 26px;
@@ -425,6 +426,7 @@
         font-size: 42px;
         padding-left: 50px;
         text-align: center;
+        padding-top: 350px;
     }
     .what-does-heading, .images-heading {
         font-size: 24px;
@@ -446,6 +448,7 @@
         font-size: 36px;
         padding-left: 10px;
         text-align: center;
+        padding-top: 350px;
     }
     .what-does-heading, .images-heading {
         font-size: 22px;
@@ -466,6 +469,7 @@
     .what-does-it-cost-text {
         font-size: 30px;
         padding: 0 5px;
+        padding-top: 350px;
     }
     .what-does-heading, .images-heading {
         font-size: 20px;
